--- a/final/package.json
+++ b/final/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.1"
   }
 }
